[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "pyrogram>=2.0.106",
    "python-telegram-bot[ext]>=22.3",
    "telegram>=0.0.1",
    "tgcrypto>=1.2.5",
]
